# home_control

./: .gitignore  Cargo.toml  README.md  config.yaml  example.env
src/: error.rs  main.rs  rest.rs
ui/: ac.slint  appwindow.slint  keypad.slint  navbar.slint  settings.slint
